api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: synergychat-api
  ports:
  - nodePort: 30080
    protocol: TCP
    port: 80
    targetPort: 8080
