web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synergychat-web-service
spec:
  selector:
    app: synergychat-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
